# probing-persona-preferences

./: .gitignore  CLAUDE.md  CODE_GUIDE.md  LICENSE  PAPER_ISSUES.md  README.md  REPRODUCING.md  TODO_producers.md  activations  claims.md  intro_discussion_review.md  main.tex  main_icml.tex  main_old.tex  main_v2.tex  numbers.tex  old_appendix.tex  plan.md  pyproject.toml  references.bib
.claude/: settings.json  settings.local.json
.claude/commands/: find-dead-code.md
activations/: README.md
claims/: canonical_probe_eval_make_paper_figures.json  character_probes.json  core_prose_claims.json  diversity_ablation.json  e1a_scatter.json  eot_discrimination_v2.json  exp3v8_avc.json  harm_breakdown.json  harm_paired_deltas.json  layer_sweep.json  manual_claims.json  manual_induced_shift_targeted.json  open_ended_axis.json  persona_sweep_make_paper_figures.json  persona_sweep_pca.json  persona_topic_profiles.json  plot_cross_model_bar.json  position_sweep.json  poster_steering.json  qwen_e1c_avc.json  refitted_shift_r.json  s4_conflict_opposing.json  sadist_open_ended_steering.json  safety_sweep_compliance.json  sft_sadist_transfer.json  steering_p_chosen.json  thurstonian_reliability.json  topic_mean_utilities.json
configs/extraction/: creak_raw.yaml  creak_repeat.yaml  error_prefill_assistant.yaml  error_prefill_followup_per_token.yaml  error_prefill_per_token.yaml  gemma3_27b_default_8layer.yaml  gemma3_27b_layer_sweep.yaml  gemma3_27b_pt_task_mean.yaml  gemma3_27b_smoke_10.yaml  gemma3_27b_turn_boundary_sweep.yaml  gptoss_120b_turn_boundary_sweep.yaml  lying_prefill.yaml  mra_tb_midwest.yaml  mra_tb_sadist.yaml  mra_tb_villain.yaml  pref_aura_early.yaml  pref_aura_sweep.yaml  pref_chaos_agent.yaml  pref_chaos_agent_train_eval.yaml  pref_chaos_agent_train_eval_local.yaml  pref_conspiracy_theorist.yaml  pref_conspiracy_theorist_train_eval.yaml  pref_conspiracy_theorist_train_eval_local.yaml  pref_contrarian_early.yaml  pref_contrarian_intellectual.yaml  pref_contrarian_intellectual_train_eval.yaml  pref_contrarian_intellectual_train_eval_local.yaml  pref_contrarian_sweep.yaml  pref_depressed_nihilist.yaml  pref_depressed_nihilist_train_eval.yaml  pref_depressed_nihilist_train_eval_local.yaml  pref_entrepreneur_sweep.yaml  pref_evil_genius.yaml  pref_evil_genius_train_eval.yaml  pref_evil_genius_train_eval_local.yaml  pref_lazy_minimalist.yaml  pref_lazy_minimalist_train_eval.yaml  pref_lazy_minimalist_train_eval_local.yaml  pref_mathematician_early.yaml  pref_mathematician_sweep.yaml  (+94 more)
configs/probes/: gemma3_10k_hoo_topic_task_mean.yaml  gemma3_10k_hoo_topic_tb-1.yaml  gemma3_10k_hoo_topic_tb-2.yaml  gemma3_10k_hoo_topic_tb-3.yaml  gemma3_10k_hoo_topic_tb-4.yaml  gemma3_10k_hoo_topic_tb-5.yaml  gemma3_pt_10k_heldout_std_demeaned.yaml  gemma3_pt_10k_heldout_std_raw.yaml  gemma3_pt_10k_heldout_task_mean.yaml  gemma3_pt_10k_hoo_topic.yaml  gemma3_pt_10k_hoo_topic_demeaned.yaml  gemma3_pt_10k_hoo_topic_task_mean.yaml  gptoss_120b_10k_heldout_std_demeaned.yaml  gptoss_120b_10k_heldout_std_raw.yaml  gptoss_120b_10k_hoo_topic.yaml  heldout_eval_gemma3_task_mean.yaml  heldout_eval_gemma3_tb-1.yaml  heldout_eval_gemma3_tb-2.yaml  heldout_eval_gemma3_tb-3.yaml  heldout_eval_gemma3_tb-4.yaml  heldout_eval_gemma3_tb-5.yaml  qwen35_122b_heldout_baselines.yaml  qwen35_122b_hoo_topic.yaml  qwen3_emb_8b_heldout_std_raw.yaml  qwen3_emb_8b_hoo_topic.yaml  qwen3_emb_8b_qwen35_heldout_std_raw.yaml  qwen3_emb_8b_qwen35_hoo_topic.yaml
configs/steering/: cross_layer_L25.yaml  cross_layer_L32.yaml  cross_layer_L46.yaml  cross_layer_differential.yaml  cross_layer_harmful.yaml  differential_L25_500.yaml  hook_patching_L25_500.yaml  hook_patching_full.yaml  hook_patching_pilot.yaml  isolated_full.yaml  isolated_v3.yaml  kv_steering_full.yaml  kv_steering_recompute.yaml  one_sided_benign.yaml  one_sided_harmful.yaml
configs/uniform_eval/: gemma3_27b.yaml  qwen35_122b.yaml
data/: qwen35_alpha_sweep_task_ids.txt
data/canonical_splits/: README.md  all_6000_task_ids.txt  eval_task_ids.txt  test_task_ids.txt  train_eval_task_ids.txt  train_task_ids.txt
data/creak/: known_correct_qwen3.5-122b-nothink.json
data/topics/: categories.json
docs/: CLAIMS.md  CODE_GUIDE.md
docs/diagrams/: test_pipeline.tex
docs/logs/: report_031826_general_utility_direction.md  report_031826_roleplaying.md  report_031926_causal_steering.md  research_report_12_mar_to_18_mar.md  research_report_19_mar_to_26_mar.md
docs/poster/: audit_checklist.md  motivation.md  poster_rules.md  pptTemplate.pptx  style.yaml
docs/self_docs/: literature_notes.md
experiments/context_interruption/: context_interruption_report.md  context_interruption_spec.md  running_log.md
experiments/layer_sweep/: checkpoints  (+9 more)
paper/: .gitignore  HARD_NUMBERS.md  PAPER_ISSUES.md  TODO_producers.md  checklist.tex  claims.md  main.tex  main_icml.tex  numbers.tex  plan.md  preprint.sty  preprint.tex  references.bib  review_principles.md
scripts/: _diag_all_tokens.py  _diag_alltok_summary.py  _diag_cov_summary.py  _diag_multi_layer.py  _diag_multi_summary.py  _diag_nothink_summary.py  _diag_oe_summary.py  _diag_open_ended.py  _diag_tb4_summary.py  _disjoint_pool_size.py  _disjointness_check.py  _verify_spans.py  analyze_claim_mismatch.py  aura_d_summary.py  build_paper.sh  check_cross_layer_schema.py  check_heights.py  check_kv_schema.py  check_pairs.py  check_schema.py  coherence_check_steering.py  coherence_judge_comparison.py  coherence_judge_comparison_results.json  convert_run_to_checkpoint.py  fix_svg.py  generate_figure.py  generate_figure_horizontal.py  generate_gauge_svg.py  generate_minilm_embeddings.py  generate_poster.py  inspect_pptx.py  plot_topic_utilities_lw.py  reclassify_stresstest.py  render_hero.py  render_hero_v3.py  render_one.py  run_all_extractions.py  safety_judge_coherence.py  shift_ood.py  show_door_examples.py  (+4 more)
src/: __init__.py  types.py
tests/: test_active_learning_checkpoint.py  test_completion_parsing.py  test_pairwise_reasoning.py  test_prompts.py  test_steering.py  test_steering_e2e.py  test_steering_pairwise.py
(+2501 files in other folders)
