[project]
name = "preferences"
version = "0.1.0"
description = "A library for measuring AI model preferences"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "instructor>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.0.0",
    "autograd>=1.6.0",
    "rich>=13.0.0",
    "scipy>=1.11.0",
    "numpy>=1.26.4",
    "scikit-learn>=1.3.0",

    # NOTE on torch / transformers pins: the SFT stack (Qwen3.5-122B-A10B with
    # Unsloth) requires torch>=2.11, transformers>=5.0, torchvision>=0.26.
    # The base pins below stay loose for non-SFT code paths; the [training]
    # extra tightens them. See experiments/sft_sadist/VERSION_ISSUES.md.
    "torch>=2.0.0",
    "accelerate>=0.26.0",
    "transformers>=4.57.0",
    "tenacity>=8.0.0",
    "trueskill>=0.4.5",
    "statsmodels>=0.14.0",
    "python-pptx>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
]

gpu = [
    "kernels",
]

# Training stack (sft_sadist + future SFT runs). Unsloth is required for
# tractable Qwen3.5-122B-A10B LoRA — vanilla peft does not have MoE-aware
# kernels for this architecture. Install with `uv pip install -e ".[training]"`
# AGAINST a fresh venv with the cu128 torch index (see [tool.uv.sources]).
#
# Pins below are verified working as of 2026-05-01 — see VERSION_ISSUES.md
# for the failure modes we hit before settling here.
#
#   - unsloth==2026.4.8 — MUST match the version that originally trained the
#     adapter. Different unsloth releases use different fused-expert LoRA
#     layouts, so a model trained on N.x will fail to load on M.y with shape
#     mismatches like "size mismatch for ...experts.base_layer.lora_A...".
#     2026.4.8's setup.py declares torch<2.11.0 but in practice torch 2.11.0
#     works fine — install it with `--no-deps` to bypass that constraint
#     (or just install other deps first). 2026.4.8 also imports
#     `GuidedDecodingParams` from vllm.sampling_params at module load — this
#     is a runtime import that ONLY fails if vllm is installed AND the symbol
#     was renamed (vllm 0.10+). Workaround: do not co-install vllm in this venv.
#   - torch>=2.11 — required by unsloth's MoE Qwen3.5 paths
#   - torchvision>=0.26 — unsloth's torchvision_compatibility_check fails otherwise
#   - transformers>=5.0 — Qwen3.5 MoE support; conflicts with `transformers<5.0`
#     pin from llmcompressor, so do NOT install llmcompressor in the same venv
#   - peft>=0.19 — required for Unsloth's fused-expert LoRA paths
#   - bitsandbytes — optional but unsloth's _utils.py imports it; without it
#     you get a warning + 4-bit QLoRA disabled (16-bit and full FT still work)
training = [
    "unsloth==2026.4.8",
    "unsloth_zoo==2026.4.9",
    "torch>=2.11",
    "torchvision>=0.26",
    "transformers>=5.0",
    "peft>=0.19",
    "trl>=0.12.0",
    "datasets>=2.20.0",
    "wandb>=0.18.0",
    "bitsandbytes",
    "xformers",
]

# vLLM-based serving (e.g. of merged sadist model for active learning).
# MUST be installed in a SEPARATE venv from [training]: vllm and unsloth import
# each other's symbols at module-load time and break each other (see
# VERSION_ISSUES.md). Recommended layout on a pod:
#   /opt/venvs/research → uv pip install -e ".[training]"   (zombuul: --extras training)
#   /opt/venvs/serve    → uv pip install -e ".[serving]"    (provisioned manually)
serving = [
    "vllm>=0.20",
]

viz = [
    "adjustText>=1.0.0",
    "ipywidgets>=8.0.0",
    "matplotlib>=3.5.0",
    "mplcursors>=0.5.0",
    "notebook>=7.0.0",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "seaborn>=0.13.0",
    "IPython>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-m 'not api and not gpu'"
markers = [
    "api: tests that make real API calls (requires API key)",
    "gpu: tests that require a GPU or heavy model loading",
    "slow: tests that take a long time to run",
    "models: tests for LLM abstraction and client implementations",
    "tasks: tests for task loading and dataset handling",
    "prompts: tests for prompt templates, builders, and generation",
    "measurement: tests for preference measurers and response parsing",
    "cache: tests for measurement storage and caching",
    "runners: tests for experiment runners and orchestration",
    "probes: tests for activation extraction and linear probes",
    "thurstonian: tests for Thurstonian model fitting and active learning",
    "trueskill: tests for TrueSkill model fitting",
    "ranking: tests for ranking-based preference measurement",
    "analysis: tests for post-hoc analysis modules",
    "steering: tests for activation steering experiments",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["FA"]  # flake8-future-annotations
